<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_button_text">Create</string>
    <string name="save_button_text">Save</string>
    <string name="notes_title">Title</string>
    <string name="notes_description">Description</string>
    <string name="edit_button_text">Edit</string>
    <string name="delete_button_text">Delete</string>
</resources>